--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"> 
+    <link rel="stylesheet" href="style.css">
     <title>덕성여대 맛집을 알아보자!</title>
   </head>
   <body>
