--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
-    <meta charset="utf-8"> 
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>덕성여대 맛집을 알아보자!</title>
   </head>
   <body>
-    <h1>덕성여대 맛집 !!</h1></h1>
+    <header>
+      <h1>덕성여대 맛집 !!</h1>
+    </header>
     <hr>
     <h3>페이지 목차</h3>
     <ul>
