--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </tr>
         <tr>
           <td><a href="pages/place6.html"><img src="./media/place6.jpg" alt="예와 손만두" width="100" height="100"></a></td>
-          <td>예와 손문두</td>
+          <td>예와 손만두</td>
           <td>만두, 만두전골</td>
           <td>4.6</td>
           <td>서울특별시 강북구 4.19로 40-8 예와손만두</td>
@@ -100,7 +100,7 @@
         <tr>
           <td><a href="pages/place7.html"><img src="./media/place7.jpg" alt="진미기사식당" width="100" height="100"></a></td>
           <td>진미기사식당</td>
-          <td>기사시강, 한천</td>
+          <td>기사식당</td>
           <td>4.1</td>
           <td>서울특별시 강북구 한천로 1163 1층 진미기사식당</td>
         </tr>
