--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
             const name = document.getElementById("name").value;
             const message = document.getElementById("message").value;
 
-            fetch("https://script.google.com/macros/s/AKfycbwPEjC3LiXvr7QVeZ7HU5k8Mb1bHgFi_gy5TzyOez9lqGCtTcqmYhbjypFfJsaCO_hO/exec", {
+            fetch("https://docs.google.com/spreadsheets/d/1oWZ2ugYQc9t_qwf4aDqCWrXOd7K55ceyBM6JMTeZ6mo/edit?gid=0#gid=0", {
                 method: "POST",
                 mode: "no-cors",
                 headers: {
